# scholarly-publishing-news

./: .gitignore  agent.py  config.py  content.py  database.py  feeds.py  llm.py  pyproject.toml  reset_feed.py  rss_generator.py
.github/workflows/: run_agent.yml
docs/: feed.xml
