[project]
name = "newsfeed"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Apodaca",email = "me@anthonyapodaca.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser (>=6.0.12,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"

